server_dev.log

> sih_project@1.0.0 dev
> nodemon server.js

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node server.js`[39m
file:///Users/prasoon/Developer/sih_project/server/services/agentService.js:1
import { GoogleGenerativeAI } from '@langchain/google-genai';
         ^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '@langchain/google-genai' does not provide an export named 'GoogleGenerativeAI'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:362:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:99:5)

Node.js v24.4.1
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
